sprites type, canvas and basic server

--- a/public/editor.html
+++ b/public/editor.html
@@ -20,8 +20,11 @@
             <li class="pure-menu-item"><a href="#" class="pure-menu-link">Export</a></li>
         </ul>
     </nav>
+    <section class="main">
+        <canvas id="canvas"></canvas>
+    </section>
 
-    <script src="../app/js/sprites2v.js"></script> <!-- TODO: absolute URL so parcel will ignore-->
+    <script src="http://localhost:3000/libs/sprites2v.js"></script> <!-- TODO: change in prod -->
     <script src="../app/js/index.js"></script>
 </body>
 </html>
