Changing tiles to walls

--- a/public/editor.html
+++ b/public/editor.html
@@ -24,13 +24,13 @@
                         <label for="columns">Columns</label>
                         <input type="number" name="columns" id="columns" placeholder="Columns">
                     </li>
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">Create</a></li>
+                    <li class="pure-menu-item"><a href="#" id="create" class="pure-menu-link">Create</a></li>
                 </ul>
             </li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Load</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Save</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Import</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Export</a></li>
+            <li class="pure-menu-item"><a href="#" id="load" class="pure-menu-link">Load</a></li>
+            <li class="pure-menu-item"><a href="#" id="save" class="pure-menu-link">Save</a></li>
+            <li class="pure-menu-item"><a href="#" id="import" class="pure-menu-link">Import</a></li>
+            <li class="pure-menu-item"><a href="#" id="export" class="pure-menu-link">Export</a></li>
         </ul>
     </nav>
     <section class="main">
