Editor toolbar graphics

--- a/public/editor.html
+++ b/public/editor.html
@@ -34,6 +34,18 @@
         </ul>
     </nav>
     <section class="main">
+        <div class="controls">
+            <button class="control active" id="walls"></button>
+            <button class="control" id="finish"></button>
+            <button class="control right" id="robot"></button>
+            <div class="controls-robot">
+                <button class="control" id="robot-left"></button>
+                <button class="control" id="robot-right"></button>
+                <button class="control" id="robot-up"></button>
+                <button class="control" id="robot-down"></button>
+            </div>
+            
+        </div>
         <canvas id="canvas" width="200px" height="80px"></canvas>
     </section>
 
