--- a/public/editor.html
+++ b/public/editor.html
@@ -47,7 +47,10 @@
                     <li class="pure-menu-item"><a href="#" id="save" class="pure-menu-link">Save</a></li>
                 </ul>
             </li>
-            <li class="pure-menu-item"><a href="#" id="import" class="pure-menu-link">Import</a></li>
+            <li class="pure-menu-item">
+                <a href="#" id="import" class="pure-menu-link">Import</a>
+                <input id="import-file" type='file' hidden/>
+            </li>
             <li class="pure-menu-item"><a href="#" id="export" class="pure-menu-link">Export</a></li>
         </ul>
     </nav>
