--- a/public/editor.html
+++ b/public/editor.html
@@ -49,7 +49,7 @@
             </li>
             <li class="pure-menu-item">
                 <a href="#" id="import" class="pure-menu-link">Import</a>
-                <input id="import-file" type='file' hidden/>
+                <input id="import-file" type='file' accept="application/json" hidden/>
             </li>
             <li class="pure-menu-item"><a href="#" id="export" class="pure-menu-link">Export</a></li>
         </ul>
