Remake structure without parcel

--- a/public/editor.html
+++ b/public/editor.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Arrow Game - Editor</title>
-    <link rel="stylesheet" href="../node_modules/purecss/build/pure-min.css">
-    <link rel="stylesheet" href="../node_modules/purecss/build/grids-responsive-min.css">
-    <link rel="stylesheet" href="../app/styles/editor.scss">
+    <link rel="stylesheet" href="/app/styles/main.css">
 </head>
 <body>
     <nav class="pure-menu pure-menu-horizontal">
@@ -70,9 +68,9 @@
         <canvas id="canvas" width="200px" height="80px"></canvas>
     </section>
 
-    <script src="http://localhost:3000/libs/sprites2v.js"></script> <!-- TODO: change in prod -->
-    <script src="http://localhost:3000/libs/menus.js"></script>
-    <script src="http://localhost:3000/libs/axios.min.js"></script>
-    <script src="../app/js/index.js"></script>
+    <script src="/libs/sprites2v.js"></script> <!-- TODO: change in prod -->
+    <script src="/libs/menus.js"></script>
+    <script src="/libs/axios.min.js"></script>
+    <script src="/app/js/index.js"></script>
 </body>
 </html>
