--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
     <script src="/libs/sprites2v.js"></script>
     <script src="/libs/menus.js"></script>
     <script src="/libs/axios.min.js"></script>
-    <script src="/app/js/index.js"></script>
+    <script src="/app/js/common.js"></script>
+    <script src="/app/js/play.js"></script>
 </body>
 </html>
