Solve button in editor

--- a/public/editor.html
+++ b/public/editor.html
@@ -50,6 +50,7 @@
                 <input id="import-file" type='file' accept="application/json" hidden/>
             </li>
             <li class="pure-menu-item"><a href="#" id="export" class="pure-menu-link">Export</a></li>
+            <li class="pure-menu-item"><a href="#" id="solve" class="pure-menu-link">Solve</a></li>
             <li class="pure-menu-item is-right"><a href="/" class="pure-menu-link">To Game</a></li>
         </ul>
     </nav>
