--- a/public/editor.html
+++ b/public/editor.html
@@ -68,6 +68,7 @@
         </div>
         <canvas id="canvas" width="200px" height="80px"></canvas>
     </section>
+    <footer class="status-display hidden"><span id="status"></span></footer>
 
     <script src="/libs/sprites2v.js"></script>
     <script src="/libs/menus.js"></script>
