Added visualized solving for play mode

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
                 <div class="control" id="robot-right" draggable="true"></div>
                 <div class="control" id="robot-down" draggable="true"></div>
             </div>
+            <button class="control" id="start"></button>
+            <button class="control hidden" id="stop"></button>
         </div>
         <canvas id="canvas" width="200px" height="80px"></canvas>
     </section>
