--- a/public/editor.html
+++ b/public/editor.html
@@ -68,7 +68,10 @@
         </div>
         <canvas id="canvas" width="200px" height="80px"></canvas>
     </section>
-    <footer class="status-display hidden"><span id="status"></span></footer>
+    <footer class="status-display hidden">
+        <span class=solvable>Use <span id="solvable-in">0</span> arrows</span>
+        <span id="status"></span>
+    </footer>
 
     <script src="/libs/sprites2v.js"></script>
     <script src="/libs/menus.js"></script>
